# Domain-Monitoring

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.dev.yaml  compose.prod.yaml  compose.yaml  postgres.env.example  pyproject.toml
scripts/: prestart.sh
src/: main.py
src/auth/: __init__.py  router.py  schemas.py  user_manager.py
src/auth/backend/: __init__.py  backend.py  strategy.py  transport.py
src/auth/cache/: __init__.py  keys.py  session.py
src/auth/dependencies/: security.py  session_service.py  sqla_user_db.py  strategy.py  user_manager.py
src/auth/models/: session.py  user.py
src/auth/repositories/: __init__.py  session.py  user.py
src/auth/services/: __init__.py  session.py
src/core/config/: log.py  mailing.py  postgres.py  redis.py  settings.py
src/core/utils/: domain_validation.py  retry.py
src/domain_monitoring/: main.py
src/domain_monitoring/auth/: config.py  fastapi_users.py  router.py  schemas.py  user_manager.py  utils.py
src/domain_monitoring/monitoring/: config.py  router.py  utils.py
src/domain_monitoring/web/: __init__.py
src/infrastructure/db/: __init__.py  base.py  db_manager.py  session.py
src/infrastructure/mailing/: client.py  service.py
src/monitoring/: __init__.py  config.py  exceptions.py  router.py
src/monitoring/dependencies/: domain_service.py
src/monitoring/models/: domain.py  domain_check.py  domain_status.py  user_domain.py
src/monitoring/repositories/: domain.py  domain_check.py
src/monitoring/schemas/: domain.py
src/web/routes/: pages.py  (+1 more)
staticfiles/auth/: index.html
(+89 files in other folders)
